// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sync - mongodb > compacting data - invalidate checkpoint 1`] = `
[
  {
    "checkpoint": {
      "buckets": [
        {
          "bucket": "mybucket[]",
          "checksum": -93886621,
          "count": 2,
          "priority": 3,
        },
      ],
      "last_op_id": "2",
      "write_checkpoint": undefined,
    },
  },
]
`;

exports[`sync - mongodb > compacting data - invalidate checkpoint 2`] = `
[
  {
    "data": {
      "after": "0",
      "bucket": "mybucket[]",
      "data": [
        {
          "checksum": -93886621n,
          "op": "CLEAR",
          "op_id": "2",
        },
      ],
      "has_more": false,
      "next_after": "2",
    },
  },
  {
    "checkpoint_diff": {
      "last_op_id": "4",
      "removed_buckets": [],
      "updated_buckets": [
        {
          "bucket": "mybucket[]",
          "checksum": 499012468,
          "count": 4,
          "priority": 3,
        },
      ],
      "write_checkpoint": undefined,
    },
  },
  {
    "data": {
      "after": "2",
      "bucket": "mybucket[]",
      "data": [
        {
          "checksum": 1859363232n,
          "data": "{"id":"t1","description":"Test 1b"}",
          "object_id": "t1",
          "object_type": "test",
          "op": "PUT",
          "op_id": "3",
          "subkey": "e5aa2ddc-1328-58fa-a000-0b5ed31eaf1a",
        },
        {
          "checksum": 3028503153n,
          "data": "{"id":"t2","description":"Test 2b"}",
          "object_id": "t2",
          "object_type": "test",
          "op": "PUT",
          "op_id": "4",
          "subkey": "13423353-9f27-59b4-baf0-64a5e09f1769",
        },
      ],
      "has_more": false,
      "next_after": "4",
    },
  },
  {
    "checkpoint_complete": {
      "last_op_id": "4",
    },
  },
]
`;

exports[`sync - mongodb > expired token 1`] = `
[
  {
    "token_expires_in": 0,
  },
]
`;

exports[`sync - mongodb > expiring token 1`] = `
[
  {
    "checkpoint": {
      "buckets": [
        {
          "bucket": "mybucket[]",
          "checksum": 0,
          "count": 0,
          "priority": 3,
        },
      ],
      "last_op_id": "0",
      "write_checkpoint": undefined,
    },
  },
  {
    "checkpoint_complete": {
      "last_op_id": "0",
    },
  },
]
`;

exports[`sync - mongodb > expiring token 2`] = `
[
  {
    "token_expires_in": 0,
  },
]
`;

exports[`sync - mongodb > sends checkpoint complete line for empty checkpoint 1`] = `
[
  {
    "checkpoint": {
      "buckets": [
        {
          "bucket": "mybucket[]",
          "checksum": -1221282404,
          "count": 1,
          "priority": 3,
        },
      ],
      "last_op_id": "1",
      "write_checkpoint": undefined,
    },
  },
  {
    "data": {
      "after": "0",
      "bucket": "mybucket[]",
      "data": [
        {
          "checksum": 3073684892,
          "data": "{"id":"t1","description":"sync"}",
          "object_id": "t1",
          "object_type": "test",
          "op": "PUT",
          "op_id": "1",
          "subkey": "e5aa2ddc-1328-58fa-a000-0b5ed31eaf1a",
        },
      ],
      "has_more": false,
      "next_after": "1",
    },
  },
  {
    "checkpoint_complete": {
      "last_op_id": "1",
    },
  },
  {
    "checkpoint_diff": {
      "last_op_id": "1",
      "removed_buckets": [],
      "updated_buckets": [],
      "write_checkpoint": "1",
    },
  },
  {
    "checkpoint_complete": {
      "last_op_id": "1",
    },
  },
]
`;

exports[`sync - mongodb > sync buckets in order 1`] = `
[
  {
    "checkpoint": {
      "buckets": [
        {
          "bucket": "b0[]",
          "checksum": 920318466,
          "count": 1,
          "priority": 2,
        },
        {
          "bucket": "b1[]",
          "checksum": -1382098757,
          "count": 1,
          "priority": 1,
        },
      ],
      "last_op_id": "2",
      "write_checkpoint": undefined,
    },
  },
  {
    "data": {
      "after": "0",
      "bucket": "b1[]",
      "data": [
        {
          "checksum": 2912868539n,
          "data": "{"id":"earlier","description":"Test 2"}",
          "object_id": "earlier",
          "object_type": "test",
          "op": "PUT",
          "op_id": "2",
          "subkey": "0dfe86bd-d15b-5fd0-9c7b-a31693030ee0",
        },
      ],
      "has_more": false,
      "next_after": "2",
    },
  },
  {
    "partial_checkpoint_complete": {
      "last_op_id": "2",
      "priority": 1,
    },
  },
  {
    "data": {
      "after": "0",
      "bucket": "b0[]",
      "data": [
        {
          "checksum": 920318466n,
          "data": "{"id":"t1","description":"Test 1"}",
          "object_id": "t1",
          "object_type": "test",
          "op": "PUT",
          "op_id": "1",
          "subkey": "e5aa2ddc-1328-58fa-a000-0b5ed31eaf1a",
        },
      ],
      "has_more": false,
      "next_after": "1",
    },
  },
  {
    "checkpoint_complete": {
      "last_op_id": "2",
    },
  },
]
`;

exports[`sync - mongodb > sync global data 1`] = `
[
  {
    "checkpoint": {
      "buckets": [
        {
          "bucket": "mybucket[]",
          "checksum": -93886621,
          "count": 2,
          "priority": 3,
        },
      ],
      "last_op_id": "2",
      "write_checkpoint": undefined,
    },
  },
  {
    "data": {
      "after": "0",
      "bucket": "mybucket[]",
      "data": [
        {
          "checksum": 920318466n,
          "data": "{"id":"t1","description":"Test 1"}",
          "object_id": "t1",
          "object_type": "test",
          "op": "PUT",
          "op_id": "1",
          "subkey": "e5aa2ddc-1328-58fa-a000-0b5ed31eaf1a",
        },
        {
          "checksum": 3280762209n,
          "data": "{"id":"t2","description":"Test 2"}",
          "object_id": "t2",
          "object_type": "test",
          "op": "PUT",
          "op_id": "2",
          "subkey": "13423353-9f27-59b4-baf0-64a5e09f1769",
        },
      ],
      "has_more": false,
      "next_after": "2",
    },
  },
  {
    "checkpoint_complete": {
      "last_op_id": "2",
    },
  },
]
`;

exports[`sync - mongodb > sync legacy non-raw data 1`] = `
[
  {
    "checkpoint": {
      "buckets": [
        {
          "bucket": "mybucket[]",
          "checksum": -852817836,
          "count": 1,
          "priority": 3,
        },
      ],
      "last_op_id": "1",
      "write_checkpoint": undefined,
    },
  },
  {
    "data": {
      "after": "0",
      "bucket": "mybucket[]",
      "data": [
        {
          "checksum": 3442149460n,
          "data": {
            "description": "Test
"string"",
            "id": "t1",
            "large_num": 12345678901234567890n,
          },
          "object_id": "t1",
          "object_type": "test",
          "op": "PUT",
          "op_id": "1",
          "subkey": "e5aa2ddc-1328-58fa-a000-0b5ed31eaf1a",
        },
      ],
      "has_more": false,
      "next_after": "1",
    },
  },
  {
    "checkpoint_complete": {
      "last_op_id": "1",
    },
  },
]
`;

exports[`sync - mongodb > sync updates to data query only 1`] = `
[
  {
    "checkpoint": {
      "buckets": [
        {
          "bucket": "by_user["user1"]",
          "checksum": 0,
          "count": 0,
          "priority": 3,
        },
      ],
      "last_op_id": "1",
      "write_checkpoint": undefined,
    },
  },
  {
    "checkpoint_complete": {
      "last_op_id": "1",
    },
  },
]
`;

exports[`sync - mongodb > sync updates to data query only 2`] = `
[
  {
    "checkpoint_diff": {
      "last_op_id": "2",
      "removed_buckets": [],
      "updated_buckets": [
        {
          "bucket": "by_user["user1"]",
          "checksum": 1418351250,
          "count": 1,
          "priority": 3,
        },
      ],
      "write_checkpoint": undefined,
    },
  },
  {
    "data": {
      "after": "0",
      "bucket": "by_user["user1"]",
      "data": [
        {
          "checksum": 1418351250n,
          "data": "{"id":"list1","user_id":"user1","name":"User 1"}",
          "object_id": "list1",
          "object_type": "lists",
          "op": "PUT",
          "op_id": "2",
          "subkey": "0ffb7b58-d14d-5efa-be6c-c8eda74ab7a8",
        },
      ],
      "has_more": false,
      "next_after": "2",
    },
  },
  {
    "checkpoint_complete": {
      "last_op_id": "2",
    },
  },
]
`;

exports[`sync - mongodb > sync updates to global data 1`] = `
[
  {
    "checkpoint": {
      "buckets": [
        {
          "bucket": "mybucket[]",
          "checksum": 0,
          "count": 0,
          "priority": 3,
        },
      ],
      "last_op_id": "0",
      "write_checkpoint": undefined,
    },
  },
  {
    "checkpoint_complete": {
      "last_op_id": "0",
    },
  },
]
`;

exports[`sync - mongodb > sync updates to global data 2`] = `
[
  {
    "checkpoint_diff": {
      "last_op_id": "1",
      "removed_buckets": [],
      "updated_buckets": [
        {
          "bucket": "mybucket[]",
          "checksum": 920318466,
          "count": 1,
          "priority": 3,
        },
      ],
      "write_checkpoint": undefined,
    },
  },
  {
    "data": {
      "after": "0",
      "bucket": "mybucket[]",
      "data": [
        {
          "checksum": 920318466n,
          "data": "{"id":"t1","description":"Test 1"}",
          "object_id": "t1",
          "object_type": "test",
          "op": "PUT",
          "op_id": "1",
          "subkey": "e5aa2ddc-1328-58fa-a000-0b5ed31eaf1a",
        },
      ],
      "has_more": false,
      "next_after": "1",
    },
  },
  {
    "checkpoint_complete": {
      "last_op_id": "1",
    },
  },
]
`;

exports[`sync - mongodb > sync updates to global data 3`] = `
[
  {
    "checkpoint_diff": {
      "last_op_id": "2",
      "removed_buckets": [],
      "updated_buckets": [
        {
          "bucket": "mybucket[]",
          "checksum": -93886621,
          "count": 2,
          "priority": 3,
        },
      ],
      "write_checkpoint": undefined,
    },
  },
  {
    "data": {
      "after": "1",
      "bucket": "mybucket[]",
      "data": [
        {
          "checksum": 3280762209n,
          "data": "{"id":"t2","description":"Test 2"}",
          "object_id": "t2",
          "object_type": "test",
          "op": "PUT",
          "op_id": "2",
          "subkey": "13423353-9f27-59b4-baf0-64a5e09f1769",
        },
      ],
      "has_more": false,
      "next_after": "2",
    },
  },
  {
    "checkpoint_complete": {
      "last_op_id": "2",
    },
  },
]
`;

exports[`sync - mongodb > sync updates to parameter query + data 1`] = `
[
  {
    "checkpoint": {
      "buckets": [],
      "last_op_id": "0",
      "write_checkpoint": undefined,
    },
  },
  {
    "checkpoint_complete": {
      "last_op_id": "0",
    },
  },
]
`;

exports[`sync - mongodb > sync updates to parameter query + data 2`] = `
[
  {
    "checkpoint_diff": {
      "last_op_id": "2",
      "removed_buckets": [],
      "updated_buckets": [
        {
          "bucket": "by_user["user1"]",
          "checksum": 1418351250,
          "count": 1,
          "priority": 3,
        },
      ],
      "write_checkpoint": undefined,
    },
  },
  {
    "data": {
      "after": "0",
      "bucket": "by_user["user1"]",
      "data": [
        {
          "checksum": 1418351250n,
          "data": "{"id":"list1","user_id":"user1","name":"User 1"}",
          "object_id": "list1",
          "object_type": "lists",
          "op": "PUT",
          "op_id": "1",
          "subkey": "0ffb7b58-d14d-5efa-be6c-c8eda74ab7a8",
        },
      ],
      "has_more": false,
      "next_after": "1",
    },
  },
  {
    "checkpoint_complete": {
      "last_op_id": "2",
    },
  },
]
`;

exports[`sync - mongodb > sync updates to parameter query only 1`] = `
[
  {
    "checkpoint": {
      "buckets": [],
      "last_op_id": "0",
      "write_checkpoint": undefined,
    },
  },
  {
    "checkpoint_complete": {
      "last_op_id": "0",
    },
  },
]
`;

exports[`sync - mongodb > sync updates to parameter query only 2`] = `
[
  {
    "checkpoint_diff": {
      "last_op_id": "1",
      "removed_buckets": [],
      "updated_buckets": [
        {
          "bucket": "by_user["user1"]",
          "checksum": 0,
          "count": 0,
          "priority": 3,
        },
      ],
      "write_checkpoint": undefined,
    },
  },
  {
    "checkpoint_complete": {
      "last_op_id": "1",
    },
  },
]
`;
